Fix the piechart
set the dataset2 into = Integer.valueOf(f1)